Added the add_expense page, filled out the form, button from Expenses page is working.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity android:name=".WaterParams" />
         <activity android:name=".TankTimeline" />
         <activity android:name=".Tasks" />
+        <activity android:name=".AddExpense" />
         <activity android:name=".Expenses"></activity>
     </application>
 
