--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name=".Expenses" />
         <activity android:name=".AddWaterParam" />
         <activity android:name=".AddTimeline" />
-        <activity android:name=".AddTask"></activity>
+        <activity android:name=".AddTask" />
+        <activity android:name=".DeleteExpense"></activity>
     </application>
 
 </manifest>
